--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
 
   <meta name="author" content="{{ site.author }}">
   <meta name="theme-color" content="#a50509">
-  <meta name="description" content="Hi, my name is Sohrab Ahmed, I am an avid datum enthusiast and developer living in Subang Jaya, Malaysia. I obtained my Bachelor of Technology degree in Computer Science & Engineering from ITS Engineering College in Greater Noida, India. I am currently pursuing a Master of Science in Machine Learning and Artificial Inteligence degree from Liverpool John Moores University, United Kingdom. I am a Big Data Specialist and Deltalake Consultant who loves to transform raw data into powerful information.">
-  <meta name="keywords" content="Sohrab, Ahmed, voidio, geek, linux, iot, machine learning, data science, computer science, AI, big data, azure, hadoop, Internet of Things, research, , hackathons, MS">
+  <meta name="description" content="Hi, Welcome to hexaim.">
+  <meta name="keywords" content="hexaim, hexaim, hexaim, geek, linux, iot, machine learning, data science, computer science, AI, big data, azure, hadoop, Internet of Things, research, , hexaim">
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
